--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,34 @@
-body{
+body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: black;
 }
 
-.main{
-    background-image: url(/assets/images/bg.jpg);
+.main {
+    background-image: url(/assets/images/bg.png);
     height: 95vh;
-    background-size: max(1200px,100vw);
+    background-size: max(1200px, 100vw);
     background-position: center center;
     background-repeat: no-repeat;
     position: relative;
 }
 
-.main .box{
+.main .box {
     height: 95vh;
     width: 100%;
-    opacity: 0.44;
+    opacity: 0.7;
     background-color: black;
     position: absolute;
     top: 0;
 }
 
-.main div{
+.main div {
     display: flex;
     gap: 20px;
+    
 }
 
-nav{
+nav {
     top: 0;
     display: flex;
     max-width: 80vw;
@@ -39,15 +40,15 @@ nav{
     padding-top: 15px;
 }
 
-nav img{
+nav>span>img {
     width: 140px;
     position: relative;
     z-index: 10;
-    
+
 }
 
 .hero {
-    height: calc(100% - 77px);
+    height: calc(100% - 125px);
     display: flex;
     flex-direction: column;
     color: white;
@@ -58,22 +59,24 @@ nav img{
     padding: 0px 30px;
 }
 
-.hero > :nth-child(1) {
+.hero> :nth-child(1) {
     font-weight: 900;
     font-size: 48px;
     text-align: center;
 }
 
-.hero > :nth-child(2),
-.hero > :nth-child(3) {
+.hero> :nth-child(2),
+.hero> :nth-child(3) {
     font-weight: 400;
     font-size: 24px;
     text-align: center;
 }
 
 .line {
-    background-color: rgb(54, 54, 54);
+    background-color: rgb(35,35,35);
     height: 8px;
+    margin: 40px 0px;
+    position: relative;
 }
 
 .btn1,
@@ -83,13 +86,19 @@ nav img{
     position: relative;
     z-index: 10;
     padding: 7px 18px;
-    font-weight: bold;
+    font-weight: 400;
+    font-size: 16px;
     border-radius: 3px;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .btn1 {
-    background-color: rgba(0, 0, 0, 0.458);
+    background-color: rgba(55, 55, 55, 0.201);
     border: 1px solid rgb(137, 131, 131);
+    display: flex;
+    justify-content: space-around;
+    gap: 7px;
 }
 
 .btn2,
@@ -97,26 +106,38 @@ nav img{
     border: none;
 }
 
-.btn2 {
-    background-color: rgb(255, 24, 24);
+.btn2,
+.btn3 {
+    background-color: rgb(229, 9, 20);
+}
+
+.btn2:hover,
+.btn3:hover {
+    background-color: rgb(201, 0, 0);
+    transition: 0.3s ease-in-out;
 }
 
 .btn3 {
-    background-color: rgb(255, 24, 24);
-    padding: 13px 20px;
     font-size: 24px;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-around;
+    gap: 7px;
+    height: 55px;
+    align-items: center;
 }
 
 input[type="email"] {
     color: rgb(255, 0, 0);
-    background-color: rgba(0, 0, 0, 0.614);
+    background-color: rgba(33, 32, 32, 0.614);
     position: relative;
     z-index: 10;
     border: 1px solid rgb(154, 147, 147);
     padding: 7px 18px;
     font-size: 16px;
-    height: 40px;
+    box-sizing: border-box;
     width: 350px;
+    height: 55px;
     border-radius: 5px;
 }
 
@@ -138,10 +159,10 @@ input[placeholder="Email address"] {
     margin: auto;
     color: white;
     align-items: center;
-    padding: 70px 10px;
+    padding: 0px 10px;
 }
 
-.first > div {
+.first>div {
     display: flex;
     flex-direction: column;
     gap: 25px;
@@ -169,14 +190,14 @@ input[placeholder="Email address"] {
     justify-content: center;
     max-width: 75vw;
     margin: auto;
-    padding: 50px 10px;
+    padding: 0px 10px;
 }
 
 .second img {
     height: 450px;
 }
 
-.second > :nth-child(2) {
+.second> :nth-child(2) {
     display: flex;
     flex-direction: column;
     gap: 25px;
@@ -191,7 +212,7 @@ input[placeholder="Email address"] {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    row-gap: 20px;
+    row-gap: 40px;
 }
 
 .que {
@@ -211,10 +232,49 @@ input[placeholder="Email address"] {
     margin: 0px 20px;
 }
 
-.que div div {
-    width: fit-content;
+.que div:hover{
+    filter: brightness(150%);
+    transition: 0.35s ease-in-out;
 }
 
-.tes1 img {
-    filter: hue-rotate(100deg);
+.que div div {
+    width: fit-content;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.email-text {
+    margin-top: 40px;
+}
+
+footer, a{
+    color: #d0cece;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.flink{
+    display: flex;
+    justify-items: start;
+    justify-content: start;
+    column-gap: 150px;
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 70px 170px;
+}
+
+li{
+    list-style: none;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+ul{
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
