--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ body {
 .main div {
     display: flex;
     gap: 20px;
-    
+
 }
 
 nav {
@@ -59,21 +59,8 @@ nav>span>img {
     padding: 0px 30px;
 }
 
-.hero> :nth-child(1) {
-    font-weight: 900;
-    font-size: 48px;
-    text-align: center;
-}
-
-.hero> :nth-child(2),
-.hero> :nth-child(3) {
-    font-weight: 400;
-    font-size: 24px;
-    text-align: center;
-}
-
 .line {
-    background-color: rgb(35,35,35);
+    background-color: rgb(35, 35, 35);
     height: 8px;
     margin: 40px 0px;
     position: relative;
@@ -85,20 +72,21 @@ nav>span>img {
     color: white;
     position: relative;
     z-index: 10;
-    padding: 7px 18px;
+    padding: 0.5rem 1rem;
     font-weight: 400;
     font-size: 16px;
     border-radius: 3px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .btn1 {
     background-color: rgba(55, 55, 55, 0.201);
     border: 1px solid rgb(137, 131, 131);
-    display: flex;
     justify-content: space-around;
-    gap: 7px;
+    gap: 0.5rem;
 }
 
 .btn2,
@@ -169,11 +157,10 @@ input[placeholder="Email address"] {
 }
 
 .secImg img {
-    width: 35vw;
+    width: 100%;
 }
 
-.heading,
-.sub-heading {
+.heading{
     font-weight: 900;
     font-size: 48px;
     color: white;
@@ -182,6 +169,7 @@ input[placeholder="Email address"] {
 .sub-heading {
     font-weight: 400;
     font-size: 24px;
+    color: white;
 }
 
 .second {
@@ -232,7 +220,7 @@ input[placeholder="Email address"] {
     margin: 0px 20px;
 }
 
-.que div:hover{
+.que div:hover {
     filter: brightness(150%);
     transition: 0.35s ease-in-out;
 }
@@ -246,33 +234,35 @@ input[placeholder="Email address"] {
     margin-top: 40px;
 }
 
-footer, a{
+footer,
+a {
     color: #d0cece;
     font-weight: 400;
     font-size: 16px;
 }
 
-.flink{
+.flink {
     display: flex;
     justify-items: start;
     justify-content: start;
     column-gap: 150px;
+    width: 60vw;
 }
 
-.footer{
+.footer {
     display: flex;
     flex-direction: column;
     gap: 15px;
     margin: 70px 170px;
 }
 
-li{
+li {
     list-style: none;
     text-decoration: underline;
     cursor: pointer;
 }
 
-ul{
+ul {
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -282,78 +272,98 @@ ul{
 
 @media screen and (max-width: 1300px) {
 
-    nav{
-        max-width: 90vw;
-    }
-
-    .first {
+    .first,
+    .second {
         flex-wrap: wrap;
     }
 
-    .secImg img {
-        width: 305px;
+    img {
+        width: 100%;
+        overflow: hidden;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    body{
+        overflow-x: hidden;
+    }
+    .hero {
+        height: calc(100% - 135px);}
+    nav img{
+        height: 25px;
+    }
+    .first,
+    .second {
+        flex-wrap: wrap;
     }
 
-    .secImg video {
-        width: 305px;
+    .btn1 p{
+        display: none;
     }
 
-    .hero> :nth-child(1) {
-        font-size: 32px;
+    img {
+        width: 100%;
     }
 
-    .hero> :nth-child(2) {
-        font-size: 18px;
+    .sect1{
+        flex-direction: column-reverse;
     }
 
-    .hero> :nth-child(3) {
-        font-size: 18px;
-    }
-
-    .hero-buttons {
+    .heading{
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 16px;
-    }
-
-    .faq h2 {
         text-align: center;
+        justify-content: center;
+        font-weight: 700;
         font-size: 32px;
     }
 
-    footer {
-        max-width: 90vw;
-        padding: 75px 0;
+    .sub-heading {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        font-size: 18px;
     }
 
-    .footer-item{
-        align-items: center;
+    .que span {
+        font-size: 12px;
     }
- 
 
-}
-
-
-
-@media screen and (max-width: 1300px) {
-
-    .footer {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 25px;
+    .que img {
+        width: 5vw;
     }
-}
 
+    .btn2,.btn1,.btn3 {
+        font-size: 12px;
+        width: fit-content;
+        height: fit-content;
+        gap: 0px;
 
-.footer a {
-    font-size: 14px;
-    color: white;
-}
+    }
 
-.footer-item {
-    display: flex;
-    flex-direction: column;
-    gap: 23px;
+    .btn3 img{
+        height: 1.5em;
+    }
+
+    .email-in{
+        flex-direction: column;
+    }
+    input[type="email"] {
+        color: rgb(255, 0, 0);
+        background-color: rgba(33, 32, 32, 0.614);
+        position: relative;
+        z-index: 10;
+        border: 1px solid rgb(154, 147, 147);
+        padding: 7px 18px;
+        font-size: 16px;
+        box-sizing: border-box;
+        width: 40vh;
+        height: 7vh;
+        border-radius: 5px;
+    }
+    .flink {
+        flex-direction: column;
+    }
+    .line{
+        margin-top: 40px;
+    }
 }
