--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -72,7 +76,8 @@ nav>span>img {
     color: white;
     position: relative;
     z-index: 10;
-    padding: 0.5rem 1rem;
+    height: 40px;
+    width: fit-content;
     font-weight: 400;
     font-size: 16px;
     border-radius: 3px;
