--- a/css/signin.css
+++ b/css/signin.css
@@ -42,9 +42,15 @@ h1{
 
 input{
     border-radius: 0.25rem;
-    padding: 1.5rem 1rem 0.5rem;
-    background-color: rgba(255, 255, 255, 0.042);
+    /* padding: 1.5rem 1rem 0.5rem; */
+    padding: 20px 16px;
+    background-color: rgba(33, 32, 32, 0.499);
     border: 1px solid rgb(82, 82, 82);
+}
+input::placeholder{
+    color: rgb(184, 184, 184);
+    font-size: 16px;
+    font-weight: 400;
 }
 button{
     border-radius: 0.25rem;
@@ -64,8 +70,34 @@ span{
     color: white;
     text-align: center;
 }
-.signin .simenu span:nth-of-type(3){
+.signin .simenu span:nth-of-type(n+3):nth-of-type(-n+5){
     text-align: left;
+}
+.signin .simenu span label{
+    margin-left: 5px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.signin .simenu span a{
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    color: white;
+}
+.signin .simenu span:nth-of-type(4){
+    color: rgba(255, 255, 255, 0.7);
+    font-weight: 400;
+}
+.signin .simenu span:nth-of-type(5){
+    color: rgb(140, 140, 140);
+    font-weight: 400;
+    font-size: 13px;
+}
+.signin .simenu span:nth-of-type(5) a{
+    color: rgb(0, 113, 235);
+    font-weight: 400;
+    font-size: 13px;
 }
 label{
     color: white;
