--- a/css/signin.css
+++ b/css/signin.css
@@ -9,7 +9,7 @@ body{
 }
 
 .main{
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .header img{
     height: 40px;
@@ -22,8 +22,9 @@ body{
 }
 
 .signin div{
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 645px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 3px;
+    height: 680px;
     width: 314px;
 }
 .simenu{
@@ -66,6 +67,18 @@ button{
 .btn2{
     background-color: #ffffff33;
 }
+.btn3{
+    background-color: #4141413a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 7px;
+    font-size: 16;
+    height: 35px;
+    width: 120px;
+    border: 1px solid rgba(128, 128, 128, 0.532);
+
+}
 span{
     color: white;
     text-align: center;
@@ -101,4 +114,29 @@ span{
 }
 label{
     color: white;
+}
+
+footer{
+    background-color: rgba(0, 0, 0, 0.697);
+    margin-top: 50px;
+}
+
+.footer span{
+    text-align: left;
+}
+
+.link-list{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+grid-template-rows: repeat(2, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 20px;
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 20px;
+    padding: 75px 150px;
 }
