--- a/css/signin.css
+++ b/css/signin.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("/assets/images/bg.jpg");
+    background-image: url("../assets/images/bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
